fixed the active nav bar and icon spacing!

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h2 {
     font-weight: normal;
     font-size: 40px;
     text-align: center;
-    color: #fff;
+    color: #de5559;
     margin: 0;
     padding: 0;
 }
@@ -41,6 +41,7 @@ h3 {
     padding: 0;
     z-index: 1;
     position: relative;
+    list-style: none;
 }
 
 .center {
@@ -60,7 +61,7 @@ h3 {
     justify-content: space-between;
     align-items: center;
     padding: 1em;
-    width: calc(100% - 2em);
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.57);
     position: fixed;
     font-family: "Wellfleet";
@@ -73,15 +74,35 @@ h3 {
     font-weight: bold;
 }
 
-#socialMedias {
+
+img#klogo {
+    width: 300px;
+}
+
+.logo-container {
     display: flex;
-    justify-content: space-betw;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 1em;
+    height: 100%;
+    background-color: #862e5f  
+}
+
+
+.socials-container {
+    display: flex;
+    width: 329px;
+    margin-top: 3em;
+    justify-content: space-evenly;
+    align-items: center;
+   
+  
     /* width: calc(100% - 2em); */
     /* position: fixed; */
 
 }
+
+
 
 nav ul {
     display: flex;
@@ -99,7 +120,7 @@ nav li a {
     text-decoration: none;
 }
 
-nav li a.active {
+nav li a.active, nav li a:focus {
     color: #fff;
     opacity: 1;
     border-bottom: 2px solid #fff;
@@ -146,18 +167,6 @@ nav li a:hover {
     background-size: cover;
 }
 
-img#klogo {
-    width: 300px;
-}
-
-.flex-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: #862e5f
-}
-
 
 /* Youtube Video responsive layout */
 
@@ -193,23 +202,6 @@ img#klogo {
   
   .video__content {
     padding-bottom:  1.25rem;
-  }
-  
-  
-  h3::before {
-    content: "\f111";
-    display: inline-block;
-    font-family: 'Font Awesome 5 Free';
-    font-size: .375rem;
-    font-weight: 900;
-    vertical-align: middle;
-    transform: translateY(-.125rem);
-    padding-right: .9375rem;
-  }
-  
-  h3 {
-    display: inline-block;
-    padding: 20px 0;
   }
   
   .video-media-youtube-inner {
